<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    tools:context="com.example.sda.testmvp.main.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Text_Input"
        android:hint="@string/text_view"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="35dp"
        app:layout_constraintHorizontal_bias="0.501" />
    <Button
        android:id="@+id/submit_button"
        android:layout_width="130dp"
        android:layout_height="62dp"
        android:gravity="center"
        android:text="@string/button_submit" android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/editText"
        android:layout_marginTop="39dp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="280dp"
        android:layout_height="19dp"
        android:hint="@string/edit_text"
        android:layout_below="@+id/submit_button"
        android:layout_centerHorizontal="true"
        android:layout_alignBottom="@+id/submit_button"
        android:layout_marginTop="54dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginRight="42dp"
        app:layout_constraintRight_toRightOf="parent" />


    <android.support.v7.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/submit_button"></android.support.v7.widget.RecyclerView>


</android.support.constraint.ConstraintLayout>
